src/style.css
body {
  margin: 0;
  font-family: 'Open Sans', sans-serif;
  background-color: black;
  max-width: 100%;
  background-repeat: no-repeat;
  background-size: cover;
  margin-left: auto;
  margin-right: auto;
  display: block;
}

.title{
  height: 9rem;
  padding: 0.31rem;
  margin: 0 auto;
  text-align: center;
  list-style: none;
}

.footer_content{
  position: absolute;
  right: 0;
  bottom: 0;
  left: 0;
  padding: 1rem;
  width: 100%;
  background-color: rgba(237, 29, 36, 0.411);
  height: 2rem;
  text-align: center;
  z-index: 1;
}

.head_menu{
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  flex-flow: row wrap;
  list-style-type: none;
  padding: 0.62rem;
  margin: 0;
  margin-bottom: 0.62rem;
  vertical-align: middle;
}

.share{
  text-decoration: none;
}

.nav1{
  background-color: rgba(237, 29, 36, 0.411);
}

.head_content, .icon_color{
  color: white;
  font-size: 1.5rem;
  cursor: pointer;
}

.head_content:hover{
  transition: 0.7s;
  font-size: 2rem;
}

.flex_style{
  padding: 0.62rem;
}

.home{
  width: 15.62rem;
  display: flex;
  margin-top: 0;
}
.home:hover{
  cursor: pointer;
  transition: 0.5s;
}

.letter_style{
  margin-top: 2rem;
  margin-left: 11rem;
}

.margin_button{
  margin-left: 1rem;
}

h3 {
  color: white;
  text-align: center;
}

.root {
  text-align: center;
  display: block;
}

.movies{
  width: 350px;
  height: 500px;
  margin: 15px;
  display: inline-block;
  position: relative;
}

.movieBg {
  height: 100%;
  background-size: cover;
}

.movies:hover > div.movieBg{
  -webkit-filter: brightness(30%);
  -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  -ms-transition: all 0.5s ease;
  transition: all 0.5s ease;
}

.movies:hover .movieText{
  visibility: visible;
  cursor:pointer;
}

.movieText {
  position: absolute;
  top: 0px;
  left: 0px;
  visibility: hidden;
  padding-top: 5rem;
  display: inline-block;
}

.movieTitle {
  font-size: 1.5rem;
  font-weight: normal;
  margin: 0;
  padding-top: 10px;
}

.moviePlot {
  font-size: 1.2rem;
  margin: 0;
  color: white;
  padding: 20px;
  text-decoration: none;
}

.movieYear {
  font-size: 1.2rem;
  color: white;
}

.container{
  display: block;
  justify-content: right;
  height: 100%;
}

.img_content, .mcuGif{
  display: block;
  max-width: 100%;
  margin: auto;
  height: auto;
  width: 25rem;
  margin-top: 4rem;
}
.button{
  background: red;
  width: 13rem;
  -webkit-border-radius: 1.75rem;
  -moz-border-radius: 1.75rem;
  border-radius: 1.75rem;
  text-shadow: 0.18rem 0.10rem 0.18rem #000000;
  font-family: Arial, Helvetica, sans-serif;
  color: #ffffff;
  font-size: 1.5rem;
  padding: 1.15rem ;
  text-decoration: none;
  background-image: -webkit-linear-gradient(top, red, #720404);
  background-image: -moz-linear-gradient(top,  red, #720404);
  background-image: -ms-linear-gradient(top,  red, #720404);
  background-image: -o-linear-gradient(top,  red, #720404);
  background-image: linear-gradient(to bottom,  red, #720404);
  margin: 2rem;
  align-items: center;
  cursor: pointer;
  z-index: 1;
}

.button:hover{
  background: #022236;
  background-image: -webkit-linear-gradient(top, #022236, #3a7bf5);
  background-image: -moz-linear-gradient(top, #022236, #3a7bf5);
  background-image: -ms-linear-gradient(top, #022236, #3a7bf5);
  background-image: -o-linear-gradient(top, #022236, #3a7bf5);
  background-image: linear-gradient(to bottom, #022236, #3a7bf5);
  text-decoration: none;
}

.divider{
  width:15rem;
  height:auto;
  display:inline-block;
}

.buttons{
  text-align: center;
}

.topHeaders{
  color: white;
  text-align: center;
  font-size: 3rem;
}

.background_marvel{
  float:right;
  max-width: 50%;
}

.mcuGif{
  max-width: 28rem;
  height: 15rem;
}

.welcomeQuestion{
  color: white;
  font-size: 1.5rem;
  text-align: center;
  margin: 2rem;
}

.infoAboutUs{
  font-size: 2.4rem;
  color:#ffffff;
  text-align: center;
  list-style: none;
  font-family: 'Open Sans', sans-serif;
  display: none;
}

.title_about{
  text-align: center;
}

.infoAboutUs:hover{
  color: red;
  transition: 0.7s;
}

.infoAboutUs1, .infoAboutUs2{
  font-size: 2rem;
  color:#ffffff;
  text-align: justify;
  margin-left: 3rem;
  margin-right: 3rem;
  font-family: 'Open Sans', sans-serif;
}

.infoFeel{
  font-family: 'Open Sans', sans-serif;
  font-size: 2.7rem;
  color: #ffffff;
  text-align: center;
}

.infoFeel:hover{
  color: #0a4bc4;
  transition: 0.5s;
}

.text{
  color: #ffffff;
  font-size: 2rem;
  font-family: 'Open Sans', sans-serif;
  text-align: center;
}

.text:hover{
  font-size: 2.1rem;
  color: #c02323;
  transition: 0.5s;
}

.heroes {
  display: none;
  text-align: center;
  padding: 2rem;
}

.characters {
}

.horizontalCard {
  width: 20rem;
  height: 15rem;
  margin: 3rem;
  border: solid #518cca;
  border-radius: 2rem;
  padding: 1.5rem;
  display: inline-block;
  vertical-align: middle;
  position: relative;
}

.horizontalCard img {
  display: block;
  max-width: 100%;
  text-align: center;
}

.horizontalCard figcaption {
  bottom: 0;
  text-align: center;
  width: 20rem;
  color: white;
  visibility: hidden;
}

figure {
  width: 10rem;
  height: 15rem;
  margin: 3rem;
  border: solid #518cca;
  border-radius: 2rem;
  padding: 1.5rem;
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  position: relative;
}

figure img {
  display: block;
  max-width: 100%;
  max-height: 100%;
  text-align: center;
}

figure figcaption {
  text-align: center;
  width: 10rem;
  color: white;
  visibility: hidden;
  display: block;
  position: absolute;
  top: 7rem;
}

figure:hover img{
  -webkit-filter: brightness(30%);
  -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  -ms-transition: all 0.5s ease;
  transition: all 0.5s ease;
  cursor: pointer;
}

figure:hover figcaption {
  visibility: visible;
  cursor: pointer;
}

 /*-----Main------*/
 p, span {
  font-size: 1.2em;
 }
.video_content{
  display: block;
  height: 100%;
  width: 100%;
  text-decoration: none;
}

.modal_container{
  background-color: rgba(0,0,0,.8);
  position:fixed;
  top:0;
  right:0;
  bottom:0;
  left:0;
  opacity:0;
  pointer-events:none;
  transition: all 1s;
}

.container_video{
  background-color:black;
  width:750px;
  padding: 0.70rem 1.25rem;
  margin: 10% auto;
  position: relative;
  display: block;
  border-width: 15px;
  border-color: whitesmoke;
  text-align: right;
}

#modal_video:target{
  opacity:1;
  pointer-events:auto;
}

.color_button{
  color: white;
}

.history{
  display: none;
  padding: 2rem;
  text-align: center;
}

.modal{
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1050;
  overflow: hidden;
  outline: 0;
}

.modal-dialog {
  position: relative;
  width: auto;
  margin: 10px;
}

.modal-content {
  position: relative;
  background-color: #fff;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  border: 1px solid #999;
  border: 1px solid rgba(0,0,0,.2);
  border-radius: 6px;
  outline: 0;
  -webkit-box-shadow: 0 3px 9px rgba(0,0,0,.5);
  box-shadow: 0 3px 9px rgba(0,0,0,.5);
}

.scale-media{
  padding-bottom: 56.25%;
  position: relative;
}

.scale-media iframe {
   border: none;
   height: 100%;
   position: absolute;
   width: 100%;
   left: 0;
   top: 0;
   background-color: white;
}

@media screen and (max-width: 64rem) and (min-width: 48.75rem){
  .title, .nav1{
    height: 7rem;
  }
  .home {
    margin-top: -1rem;
  }
  .letter_style{
    margin-left: 4rem;
  }
  .yes, .no {
    margin-left: 14.5rem;
  }
}

@media screen and (max-width: 48.75rem) and (min-width: 30rem){
  .title, .nav1{
    height: 6rem;
  }
  .home {
    width: 13rem;
    margin-top: -1rem;
  }
  .letter_style{
    margin-left: 2rem;
  }
  .head_content{
    font-size: 1rem;
  }
  .yes, .no {
    margin-left: 9rem;
  }
  .head_content:hover{
    font-size: 1.3rem;
  }
  .infoAboutUs1, .infoAboutUs2{
    font-size: 1.5rem;
  }
}

